snapshots/serde/serde_test/src/test__token.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 519,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "Token",
            ),
            start_line: 515,
            end_line: 519,
            kind: Impl,
            spaces: [
                FuncSpace {
                    name: Some(
                        "fmt",
                    ),
                    start_line: 516,
                    end_line: 518,
                    kind: Function,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 2,
                            closure_nargs: 0,
                            fn_nargs_sum: 2,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 2,
                            closure_nargs_min: 0,
                            fn_nargs_max: 2,
                            closure_nargs_max: 0,
                            total_functions: 1,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 1,
                            exit_sum: 1,
                            total_space_functions: 1,
                            exit_min: 1,
                            exit_max: 1,
                        },
                        cognitive: Stats {
                            structural: 0,
                            structural_sum: 0,
                            structural_min: 0,
                            structural_max: 0,
                            nesting: 0,
                            total_space_functions: 1,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 1.000,
                            cyclomatic: 1.000,
                            n: 1,
                            cyclomatic_max: 1.000,
                            cyclomatic_min: 1.000,
                        },
                        halstead: Stats {
                            u_operators: 7,
                            operators: 10,
                            u_operands: 4,
                            operands: 9,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 515,
                                end: 517,
                                unit: fal,
                                sloc_min: 3,
                                sloc_max: 3,
                            },
                            ploc: Ploc {
                                lines: {
                                    516,
                                    517,
                                    515,
                                },
                                ploc_min: 3,
                                ploc_max: 3,
                            },
                            cloc: Cloc {
                                only_comment_lines: 0,
                                code_comment_lines: 0,
                                comment_line_end: None,
                                cloc_min: 0,
                                cloc_max: 0,
                            },
                            lloc: Lloc {
                                logical_lines: 0,
                                lloc_min: 0,
                                lloc_max: 0,
                            },
                            space_count: 1,
                            blank_min: 0,
                            blank_max: 0,
                        },
                        nom: Stats {
                            functions: 1,
                            closures: 0,
                            functions_sum: 1,
                            closures_sum: 0,
                            functions_min: 1,
                            functions_max: 1,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 19.000,
                            halstead_vocabulary: 11.000,
                            halstead_volume: 65.729,
                            cyclomatic: 1.000,
                            sloc: 3.000,
                            comments_percentage: 0.000,
                        },
                        abc: Stats {
                            assignments: 0.000,
                            assignments_sum: 0.000,
                            assignments_min: 0.000,
                            assignments_max: 0.000,
                            branches: 0.000,
                            branches_sum: 0.000,
                            branches_min: 0.000,
                            branches_max: 0.000,
                            conditions: 0.000,
                            conditions_sum: 0.000,
                            conditions_min: 0.000,
                            conditions_max: 0.000,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.000,
                            class_wmc: 0.000,
                            interface_wmc: 0.000,
                            class_wmc_sum: 0.000,
                            interface_wmc_sum: 0.000,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: fal,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: fal,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 3.000,
                    cyclomatic: 2.000,
                    n: 2,
                    cyclomatic_max: 2.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 8,
                    operators: 12,
                    u_operands: 4,
                    operands: 9,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 514,
                        end: 518,
                        unit: fal,
                        sloc_min: 3,
                        sloc_max: 3,
                    },
                    ploc: Ploc {
                        lines: {
                            517,
                            514,
                            516,
                            518,
                            515,
                        },
                        ploc_min: 3,
                        ploc_max: 3,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 0,
                        lloc_min: 0,
                        lloc_max: 0,
                    },
                    space_count: 2,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 21.000,
                    halstead_vocabulary: 12.000,
                    halstead_volume: 75.284,
                    cyclomatic: 3.000,
                    sloc: 5.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 1,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 1,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 4.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 2.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 13,
            operators: 165,
            u_operands: 51,
            operands: 78,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 519,
                unit: tru,
                sloc_min: 5,
                sloc_max: 5,
            },
            ploc: Ploc {
                lines: {
                    0,
                    512,
                    183,
                    305,
                    110,
                    159,
                    92,
                    74,
                    263,
                    452,
                    56,
                    361,
                    38,
                    288,
                    20,
                    459,
                    264,
                    392,
                    2,
                    130,
                    453,
                    514,
                    240,
                    368,
                    362,
                    423,
                    216,
                    149,
                    143,
                    332,
                    265,
                    454,
                    198,
                    3,
                    515,
                    308,
                    174,
                    363,
                    101,
                    217,
                    83,
                    266,
                    455,
                    516,
                    65,
                    120,
                    47,
                    364,
                    29,
                    218,
                    285,
                    11,
                    395,
                    456,
                    517,
                    511,
                    365,
                    426,
                    219,
                    146,
                    335,
                    140,
                    518,
                },
                ploc_min: 5,
                ploc_max: 5,
            },
            cloc: Cloc {
                only_comment_lines: 415,
                code_comment_lines: 0,
                comment_line_end: Some(
                    510,
                ),
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 0,
                lloc_min: 0,
                lloc_max: 0,
            },
            space_count: 3,
            blank_min: 0,
            blank_max: 0,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 243.000,
            halstead_vocabulary: 64.000,
            halstead_volume: 1458.000,
            cyclomatic: 4.000,
            sloc: 519.000,
            comments_percentage: 0.800,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
